# TF2-CustomWeaponHelper-Redux

./: LICENSE
backend/: .env  .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/api/: weapons.rs
backend/src/data/: database.rs  model.rs
frontend/: angular.json  package-lock.json
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/app/modules/base/: base-routing.module.ts  base.module.ts
frontend/src/app/modules/base/pages/: page-not-found.component.html
frontend/src/app/modules/customizer/: customizer-routing.module.ts  customizer.module.ts
frontend/src/app/modules/customizer/pages/generate-weapon/: customizer.component.html  customizer.component.sass  customizer.component.ts
frontend/src/app/pages/customizer/: customizer.component.html  customizer.component.sass
frontend/src/app/shared/enums/: effect-enum.ts  mercenary-enum.ts  quality-enum.ts  slot-enum.ts  valuetype-enum.ts
frontend/src/app/shared/models/: attribute-type.ts  customweapon-model.ts  weapon-type.ts
frontend/src/app/shared/pipes/: enumtoarray-pipe.ts
