[package]
name = "tf2customweaponhelper"
version = "0.1.1"
edition = "2021"

[dependencies]
mongodb = "2.3.*"
serde = "1.0.*"
chrono = "0.4.*"
tokio = "1.23.*"
thiserror = "1.0.*"
futures = "0.3.*"
dotenv = "0.15.*"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features = ["json"]
